Initial API work for Dynamic Docker Registry
